<resources>
    <string name="app_name">TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>
    <string name="str_add_fragment_title">Title</string>
    <string name="str_add_fragment_description">Description</string>
    <string name="str_menu_search">Search</string>
    <string name="str_priority_high">Priority High</string>
    <string name="str_priority_low">Priority Low</string>
    <string name="str_sort_by">Sort By</string>
    <string name="str_delete_all">Delete All</string>
    <string name="str_check">Check</string>
    <string name="str_save">Save</string>
    <string name="str_delete">Delete</string>

    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>

    </string-array>
</resources>